Fixed issue with scrollbar when content of body is huge

--- a/src/layouts/DefaultLayout/DefaultLayout.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.scss
@@ -9,6 +9,9 @@
 .main {
     .container-fluid {
         padding: 0 0;
+        height: calc(100vh - 43px);
+        overflow-y: auto;
+        overflow-x: hidden;
     }
 }
 
